# Generic_PDE_Solver

./: .gitignore  Full codebase exploration.md  LICENSE  README.md  diff.md  issues.md  pyproject.toml
pretrained_models/: fno_manifest.npz  fno_val_data.npz  fno_val_data_chunk_000000.npz  pinn.pt  pinn_best.pt  pinn_bk.pt  val_data.npz
src/: app.py  dataset.py  evaluate.py  inference_engine.py  launcher.py  ood_detector.py  pde_parser.py  pde_space.py  trainer.py  training.py
src/models/: __init__.py  checkpoints.py  conditional_inputs.py  conditional_solvers.py  fno_layers.py  fno_model.py
src/physics/: __init__.py  pde_helpers.py
unit_test/: test_conditional_inputs.py  test_dataset_artifact_loader.py  test_e2e_dataflow.py  test_inference_engine_routes.py  test_ood_detector.py  test_trainer_generate_serial.py  test_training_guards.py
